fixed footer spacing on mobile

--- a/src/pages/Footer/Footerpage.css
+++ b/src/pages/Footer/Footerpage.css
@@ -137,8 +137,14 @@
   }
   
   @media screen and (max-width: 820px) {
+    .footer-link-items a {
+      font-size: 12px;
+    }
+    
     .footer-links {
       padding-top: 2rem;
+      flex-direction: column;
+      align-items: center;
     }
   
     .footer-input {
